--- a/src/main/resources/ui/AdministradorView.fxml
+++ b/src/main/resources/ui/AdministradorView.fxml
@@ -35,10 +35,10 @@
                   </Button>
                   <Separator layoutX="311.0" layoutY="1.0" orientation="VERTICAL" prefHeight="700.0" prefWidth="21.0" />
                   <ImageView fitHeight="50.0" fitWidth="32.0" layoutX="22.0" layoutY="194.0" pickOnBounds="true" preserveRatio="true">
-                        <Image url="@../images/ver.png" />
+                        <Image url="@images/ver.png" />
                   </ImageView>
                   <ImageView fitHeight="80.0" fitWidth="100.0" layoutX="20.0" layoutY="23.0" pickOnBounds="true" preserveRatio="true">
-                        <Image url="@../images/logo_app.png" />
+                        <Image url="@images/logo_app.png" />
                   </ImageView>
                   <Separator layoutY="116.0" prefHeight="3.0" prefWidth="322.0" />
                   <Text fill="#e5a000" layoutX="117.0" layoutY="72.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Gym System">
@@ -47,18 +47,18 @@
                      </font>
                   </Text>
                   <ImageView fitHeight="50.0" fitWidth="32.0" layoutX="23.0" layoutY="260.0" pickOnBounds="true" preserveRatio="true">
-                        <Image url="@../images/promover.png" />
+                        <Image url="@images/promover.png" />
                   </ImageView>
                   <ImageView fitHeight="56.0" fitWidth="37.0" layoutX="20.0" layoutY="325.0" pickOnBounds="true" preserveRatio="true">
-                        <Image url="@../images/rebaixar.png" />
+                        <Image url="@images/rebaixar.png" />
                   </ImageView>
                   <ImageView fitHeight="50.0" fitWidth="32.0" layoutX="22.0" layoutY="392.0" pickOnBounds="true" preserveRatio="true">
-                        <Image url="@../images/excluir.png" />
+                        <Image url="@images/excluir.png" />
                   </ImageView>
             </AnchorPane>
             <AnchorPane layoutX="781.0" layoutY="-6.0" prefHeight="80.0" prefWidth="100.0">
                   <ImageView fitHeight="80.0" fitWidth="100.0" layoutX="15.0" layoutY="22.0" pickOnBounds="true" preserveRatio="true" AnchorPane.topAnchor="22.0">
-                        <Image url="@../images/sair.png" />
+                        <Image url="@images/sair.png" />
                   </ImageView>
                   <Button fx:id="BSairDoApp" layoutX="5.0" layoutY="11.0" mnemonicParsing="false" onAction="#handleSair" prefHeight="80.0" prefWidth="100.0" style="-fx-background-color: transparent;" />
             </AnchorPane>
