--- a/src/main/resources/ui/TreinoView.fxml
+++ b/src/main/resources/ui/TreinoView.fxml
@@ -22,15 +22,15 @@
                      </font>
                   </Button>
                   <ImageView fx:id="ITreino" fitHeight="80.0" fitWidth="100.0" layoutX="15.0" layoutY="23.0" pickOnBounds="true" preserveRatio="true">
-                        <Image url="@../images/muque.png" />
+                        <Image url="@images/muque.png" />
                   </ImageView>
                   <Separator layoutX="314.0" layoutY="1.0" orientation="VERTICAL" prefHeight="700.0" prefWidth="6.0" />
                   <Separator layoutY="109.0" prefHeight="8.0" prefWidth="314.0" />
                   <ImageView fitHeight="50.0" fitWidth="32.0" layoutX="15.0" layoutY="271.0" pickOnBounds="true" preserveRatio="true">
-                        <Image url="@../images/ver.png" />
+                        <Image url="@images/ver.png" />
                   </ImageView>
                   <ImageView fitHeight="50.0" fitWidth="28.0" layoutX="17.0" layoutY="198.0" pickOnBounds="true" preserveRatio="true">
-                        <Image url="@../images/ferramenta-lapis.png" />
+                        <Image url="@images/ferramenta-lapis.png" />
                   </ImageView>
                   <Text fill="#9c27b0" layoutX="108.0" layoutY="72.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Treinos">
                      <font>
@@ -40,7 +40,7 @@
             </AnchorPane>
             <AnchorPane layoutX="800.0" layoutY="-11.0" prefHeight="80.0" prefWidth="100.0">
                   <ImageView fitHeight="80.0" fitWidth="100.0" layoutX="10.0" layoutY="23.0" pickOnBounds="true" preserveRatio="true" AnchorPane.topAnchor="23.0">
-                        <Image url="@../images/sair.png" />
+                        <Image url="@images/sair.png" />
                   </ImageView>
                   <Button fx:id="IFechar" layoutX="10.0" layoutY="12.0" mnemonicParsing="false" onAction="#fecharTela" prefHeight="80.0" prefWidth="80.0" style="-fx-background-color: transparent;" />
             </AnchorPane>
