--- a/src/main/resources/ui/ExercicioView.fxml
+++ b/src/main/resources/ui/ExercicioView.fxml
@@ -40,40 +40,18 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="900.0" style="-fx-background-color: #2c2c2c;" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.upe.controller.ExercicioViewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+            prefHeight="700.0" prefWidth="900.0" style="-fx-background-color: #2c2c2c;"
+            xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1">
 
       <AnchorPane prefHeight="701.0" prefWidth="322.0">
 
-            <Button fx:id="BDetalhesEX" alignment="CENTER" contentDisplay="CENTER" layoutX="70.0" layoutY="434.0" mnemonicParsing="false" onAction="#handleVerDetalhesExercicio" prefHeight="40.0" prefWidth="240.0" style="-fx-background-color: #1E1E1E;" text="Ver detalhes de exercício" textFill="#e5a000">
-               <font>
-                  <Font size="15.0" />
-               </font>
-            </Button>
-            <Button fx:id="BExcluirEX" alignment="CENTER" contentDisplay="CENTER" layoutX="70.0" layoutY="368.0" mnemonicParsing="false" onAction="#handleExcluirExercicio" prefHeight="40.0" prefWidth="240.0" style="-fx-background-color: #1E1E1E;" text="Excluir exercício" textFill="#e5a000">
-               <font>
-                  <Font size="15.0" />
-               </font>
-            </Button>
-            <Button fx:id="BEditarEX" alignment="CENTER" contentDisplay="CENTER" layoutX="70.0" layoutY="304.0" mnemonicParsing="false" onAction="#handleEditarExercicio" prefHeight="40.0" prefWidth="240.0" style="-fx-background-color: #1E1E1E;" text="Editar exercício" textFill="#e5a000">
-               <font>
-                  <Font size="15.0" />
-               </font>
-            </Button>
-            <Button fx:id="BListarEX" alignment="CENTER" contentDisplay="CENTER" layoutX="70.0" layoutY="171.0" mnemonicParsing="false" onAction="#handleListarExercicios" prefHeight="40.0" prefWidth="240.0" style="-fx-background-color: #1E1E1E;" text="Listar meus exercícios" textFill="#e5a000">
-               <font>
-                  <Font size="15.0" />
-               </font>
-            </Button>
-            <Button fx:id="BCadastrarEX" alignment="CENTER" contentDisplay="CENTER" layoutX="70.0" layoutY="236.0" mnemonicParsing="false" onAction="#handleCadastrarExercicio" prefHeight="40.0" prefWidth="240.0" style="-fx-background-color: #1E1E1E;" text="Cadastrar novo exercício" textFill="#e5a000">
-               <font>
-                  <Font size="15.0" />
-               </font>
-            </Button>
-      <Button fx:id="BVisualizarEX1" alignment="CENTER" contentDisplay="CENTER" layoutX="70.0" layoutY="494.0" mnemonicParsing="false" onAction="#handleVisualizarExercicio" prefHeight="40.0" prefWidth="240.0" style="-fx-background-color: #1E1E1E;" text="Visualizar Exercício" textFill="#e5a000">
-         <font>
-            <Font size="15.0" />
-         </font>
-      </Button>
+            <Button fx:id="BDetalhesEX" alignment="CENTER" contentDisplay="CENTER" layoutX="70.0" layoutY="434.0" mnemonicParsing="false" onAction="#handleVerDetalhesExercicio" prefHeight="40.0" prefWidth="240.0" style="-fx-background-color: #1E1E1E;" text="Ver detalhes de exercício" textFill="#e5a000"><font><Font size="15.0" /></font></Button>
+            <Button fx:id="BExcluirEX" alignment="CENTER" contentDisplay="CENTER" layoutX="70.0" layoutY="368.0" mnemonicParsing="false" onAction="#handleExcluirExercicio" prefHeight="40.0" prefWidth="240.0" style="-fx-background-color: #1E1E1E;" text="Excluir exercício" textFill="#e5a000"><font><Font size="15.0" /></font></Button>
+            <Button fx:id="BEditarEX" alignment="CENTER" contentDisplay="CENTER" layoutX="70.0" layoutY="304.0" mnemonicParsing="false" onAction="#handleEditarExercicio" prefHeight="40.0" prefWidth="240.0" style="-fx-background-color: #1E1E1E;" text="Editar exercício" textFill="#e5a000"><font><Font size="15.0" /></font></Button>
+            <Button fx:id="BListarEX" alignment="CENTER" contentDisplay="CENTER" layoutX="70.0" layoutY="171.0" mnemonicParsing="false" onAction="#handleListarExercicios" prefHeight="40.0" prefWidth="240.0" style="-fx-background-color: #1E1E1E;" text="Listar meus exercícios" textFill="#e5a000"><font><Font size="15.0" /></font></Button>
+            <Button fx:id="BCadastrarEX" alignment="CENTER" contentDisplay="CENTER" layoutX="70.0" layoutY="236.0" mnemonicParsing="false" onAction="#handleCadastrarExercicio" prefHeight="40.0" prefWidth="240.0" style="-fx-background-color: #1E1E1E;" text="Cadastrar novo exercício" textFill="#e5a000"><font><Font size="15.0" /></font></Button>
+            <Button fx:id="BVisualizarEX1" alignment="CENTER" contentDisplay="CENTER" layoutX="70.0" layoutY="494.0" mnemonicParsing="false" onAction="#handleVisualizarExercicio" prefHeight="40.0" prefWidth="240.0" style="-fx-background-color: #1E1E1E;" text="Visualizar Exercício" textFill="#e5a000"><font><Font size="15.0" /></font></Button>
             <ImageView fx:id="IMenu" fitHeight="80.0" fitWidth="100.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
                   <Image url="@images/muque.png" />
             </ImageView>
