--- a/src/main/resources/fxml/AdministradorView.fxml
+++ b/src/main/resources/fxml/AdministradorView.fxml
@@ -13,22 +13,7 @@
 
       <AnchorPane style="-fx-background-color: #2c2c2c;" VBox.vgrow="ALWAYS">
             <AnchorPane prefHeight="701.0" prefWidth="317.0">
-                  <Button fx:id="BListarUsuarios" layoutX="67.0" layoutY="189.0" mnemonicParsing="false" onAction="#handleListarUsuarios" prefHeight="40.0" prefWidth="240.0" style="-fx-background-color: #1e1e1e;" text="Listar Usuários" textFill="#e5a000">
-                     <font>
-                        <Font size="15.0" />
-                     </font>
-                  </Button>
-                  <Button fx:id="BPromoverUsuario" layoutX="67.0" layoutY="256.0" mnemonicParsing="false" onAction="#handlePromoverUsuario" prefHeight="40.0" prefWidth="240.0" style="-fx-background-color: #1e1e1e;" text="Promover Usuário a Admin" textFill="#e5a000">
-                     <font>
-                        <Font size="15.0" />
-                     </font>
-                  </Button>
-                  <Button fx:id="BRebaixarUsuario" layoutX="67.0" layoutY="323.0" mnemonicParsing="false" onAction="#handleRebaixarUsuario" prefHeight="40.0" prefWidth="240.0" style="-fx-background-color: #1e1e1e;" text="Rebaixar Usuário a Comum" textFill="#e5a000">
-                     <font>
-                        <Font size="15.0" />
-                     </font>
-                  </Button>
-                  <Button fx:id="BRemoverUsuario" layoutX="67.0" layoutY="388.0" mnemonicParsing="false" onAction="#handleRemoverUsuario" prefHeight="40.0" prefWidth="240.0" style="-fx-background-color: #1e1e1e;" text="Remover Usuário" textFill="#e5a000">
+                  <Button fx:id="BListarUsuarios" layoutX="67.0" layoutY="189.0" mnemonicParsing="false" onAction="#handleListarUsuarios" prefHeight="40.0" prefWidth="240.0" style="-fx-background-color: #1e1e1e;" text="Gerenciar Usuários" textFill="#e5a000">
                      <font>
                         <Font size="15.0" />
                      </font>
@@ -46,15 +31,6 @@
                         <Font name="System Bold" size="24.0" />
                      </font>
                   </Text>
-                  <ImageView fitHeight="50.0" fitWidth="32.0" layoutX="23.0" layoutY="260.0" pickOnBounds="true" preserveRatio="true">
-                        <Image url="@../images/promover.png" />
-                  </ImageView>
-                  <ImageView fitHeight="56.0" fitWidth="37.0" layoutX="20.0" layoutY="325.0" pickOnBounds="true" preserveRatio="true">
-                        <Image url="@../images/rebaixar.png" />
-                  </ImageView>
-                  <ImageView fitHeight="50.0" fitWidth="32.0" layoutX="22.0" layoutY="392.0" pickOnBounds="true" preserveRatio="true">
-                        <Image url="@../images/excluir.png" />
-                  </ImageView>
             </AnchorPane>
             <AnchorPane layoutX="781.0" layoutY="-6.0" prefHeight="80.0" prefWidth="100.0">
                   <ImageView fitHeight="80.0" fitWidth="100.0" layoutX="15.0" layoutY="22.0" pickOnBounds="true" preserveRatio="true" AnchorPane.topAnchor="22.0">
