--- a/src/main/resources/fxml/Login.fxml
+++ b/src/main/resources/fxml/Login.fxml
@@ -9,52 +9,78 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
+<?import javafx.geometry.Insets?>
 <BorderPane prefHeight="700.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.upe.controller.LoginController">
     <center>
-        <AnchorPane prefHeight="700.0" prefWidth="900.0" style="-fx-background-color: #2C2C2C;" BorderPane.alignment="CENTER">
-            <AnchorPane layoutX="227.0" layoutY="1.0" prefHeight="700.0" prefWidth="450.0" style="-fx-background-color: #2c2c2c; -fx-background-radius: 15;">
-                <Pane layoutX="28.0" layoutY="204.0" prefHeight="370.0" prefWidth="394.0" style="-fx-background-color: #FFFFFF; -fx-background-radius: 15;">
-                    <Label layoutX="44.0" layoutY="94.0" prefHeight="28.0" prefWidth="90.0" text="E-mail" />
-                    <TextField fx:id="emailTextField" layoutX="44.0" layoutY="122.0" prefHeight="26.0" prefWidth="307.0" promptText="E-mail" />
-                    <Label layoutX="44.0" layoutY="157.0" prefHeight="28.0" prefWidth="90.0" text="Senha" />
-                    <PasswordField fx:id="setSenhaField" layoutX="44.0" layoutY="184.0" prefHeight="26.0" prefWidth="307.0" promptText="Senha" />
-                    <Button fx:id="entrarBotao" layoutX="130.0" layoutY="240.0" mnemonicParsing="false" onAction="#onEntrar" prefHeight="26.0" prefWidth="134.0" style="-fx-background-color: #5A189A;" text="Entrar" textFill="#ececec">
-                        <font>
-                            <Font name="System Bold" size="12.0" />
-                        </font>
-                    </Button>
-                    <Button fx:id="cadastreseBotao" layoutX="199.0" layoutY="295.0" mnemonicParsing="false" onAction="#onCadastrase" prefHeight="26.0" prefWidth="91.0" style="-fx-background-color: #e5a000;" text="Cadastre-se" textFill="WHITE">
-                        <font>
-                            <Font name="System Bold" size="12.0" />
-                        </font>
-                    </Button>
-                    <Label layoutX="89.0" layoutY="298.0" text="Já tem cadastro?">
-                  <font>
-                     <Font size="14.0" />
-                  </font></Label>
-               <Text fill="#5a189a" layoutX="165.0" layoutY="55.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Entrar">
-                  <font>
-                     <Font name="System Bold" size="24.0" />
-                  </font>
-               </Text>
-                </Pane>
-                <ImageView fitHeight="80.0" fitWidth="100.0" layoutX="187.0" layoutY="50.0" pickOnBounds="true" preserveRatio="true">
-                    <Image url="@../images/logo_app.png" />
+        <StackPane style="-fx-background-color: #2C2C2C;" BorderPane.alignment="CENTER">
+
+            <VBox alignment="CENTER"
+                  spacing="20"
+                  style="-fx-background-color: #2c2c2c; -fx-background-radius: 15;"
+                  maxWidth="600">
+                <padding>
+                    <Insets top="40" right="40" bottom="40" left="40"/>
+                </padding>
+
+                <!-- Logo -->
+                <ImageView fitHeight="80.0" preserveRatio="true">
+                    <Image url="/images/logo_app.png"/>
                 </ImageView>
-            <Button fx:id="voltarBotao" layoutX="195.0" layoutY="611.0" mnemonicParsing="false" onAction="#onVoltar" prefHeight="27.0" prefWidth="60.0" style="-fx-border-radius: 6; -fx-background-radius: 6; -fx-background-color: #978e8e;" text="Voltar" textFill="#515151">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font>
-            </Button>
-            <Text fill="#e5a000" layoutX="139.0" layoutY="162.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Gym System" wrappingWidth="175.61328125">
-               <font>
-                  <Font name="System Bold" size="30.0" />
-               </font>
-            </Text>
-            </AnchorPane>
-        </AnchorPane>
+
+                <Text fill="#e5a000" text="Gym System">
+                    <font>
+                        <Font name="System Bold" size="30"/>                    </font>
+                </Text>
+
+                <!-- Caixa branca -->
+                <VBox spacing="15"
+                      style="-fx-background-color: #FFFFFF; -fx-background-radius: 15;"
+                      maxWidth="500"
+                      alignment="CENTER">
+                    <padding>
+                        <Insets top="30" right="30" bottom="30" left="30"/>
+                    </padding>
+
+                    <Text fill="#5a189a" text="Entrar">
+                        <font>
+                            <Font name="System Bold" size="24"/>
+                        </font>
+                    </Text>
+
+                    <Label text="E-mail"/>
+                    <TextField fx:id="emailTextField" promptText="E-mail" maxWidth="320"/>
+
+                    <Label text="Senha"/>
+                    <PasswordField fx:id="setSenhaField" promptText="Senha" maxWidth="320"/>
+
+                    <Button fx:id="entrarBotao"
+                            text="Entrar"
+                            onAction="#onEntrar"
+                            maxWidth="320"
+                            style="-fx-background-color: #5A189A; -fx-text-fill: #ececec; -fx-font-weight: bold;" />
+
+                    <HBox alignment="CENTER" spacing="5">
+                        <Label text="Já tem cadastro?"/>
+                        <Button fx:id="cadastreseBotao"
+                                text="Cadastre-se"
+                                onAction="#onCadastrase"
+                                style="-fx-background-color: #e5a000; -fx-text-fill: white;" />
+                    </HBox>
+                </VBox>
+
+                <!-- Botão voltar -->
+                <Button fx:id="voltarBotao"
+                        text="Voltar"
+                        onAction="#onVoltar"
+                        style="-fx-border-radius: 6; -fx-background-radius: 6; -fx-background-color: #978e8e; -fx-text-fill: #515151;"/>
+            </VBox>
+
+        </StackPane>
     </center>
 </BorderPane>
