--- a/src/main/resources/ui/ExerciciosView.fxml
+++ b/src/main/resources/ui/ExerciciosView.fxml
@@ -19,14 +19,14 @@
             <!-- Cabeçalho: total e botão adicionar -->
             <Label fx:id="totalLabel" layoutX="20.0" layoutY="18.0" textFill="#e5a000" style="-fx-font-size: 16px; -fx-font-weight: bold;" />
 
-            <Button fx:id="BAddExercicio" layoutX="740.0" layoutY="12.0" mnemonicParsing="false" onAction="#handleAdicionarExercicio" prefHeight="36.0" prefWidth="140.0" style="-fx-background-color: #1e1e1e;" text="Adicionar" textFill="#e5a000">
+            <Button fx:id="BAddExercicio" mnemonicParsing="false" onAction="#handleAdicionarExercicio" prefHeight="36.0" prefWidth="140.0" style="-fx-background-color: #1e1e1e;" text="Adicionar" textFill="#e5a000" AnchorPane.topAnchor="12.0" AnchorPane.rightAnchor="20.0">
                   <font>
                         <Font size="13.0" />
                   </font>
             </Button>
 
             <!-- Tabela ocupa a maior parte da área -->
-            <TableView fx:id="tableExercicios" layoutX="20.0" layoutY="60.0" prefHeight="620.0" prefWidth="860.0">
+            <TableView fx:id="tableExercicios" prefHeight="620.0" prefWidth="860.0" AnchorPane.topAnchor="60.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.bottomAnchor="80.0">
                   <columns>
                         <TableColumn fx:id="colId" text="ID" prefWidth="60.0" />
                             <TableColumn fx:id="colNome" text="Nome" prefWidth="200.0" />
@@ -34,7 +34,12 @@
                             <TableColumn fx:id="colAcoes" text="Ações" prefWidth="260.0" />
                   </columns>
             </TableView>
-
+            
+            <Button fx:id="BVoltar" mnemonicParsing="false" onAction="#handleVoltar" prefHeight="36.0" prefWidth="140.0" style="-fx-background-color: #1e1e1e;" text="Voltar" textFill="#e5a000" AnchorPane.bottomAnchor="12.0" AnchorPane.rightAnchor="20.0">
+                  <font>
+                        <Font size="13.0" />
+                  </font>
+            </Button>
       </AnchorPane>
 
 </VBox>
