--- a/src/main/resources/ui/MenuRelatorios.fxml
+++ b/src/main/resources/ui/MenuRelatorios.fxml
@@ -14,7 +14,7 @@
 
     <!-- Botão Sair -->
     <AnchorPane layoutX="775.0" layoutY="-17.0" prefHeight="138.0" prefWidth="150.0">
-        <ImageView fitHeight="80.0" fitWidth="100.0" layoutX="35.0" layoutY="29.0" pickOnBounds="true" preserveRatio="true" AnchorPane.topAnchor="29.0">
+        <ImageView fitHeight="80.0" fitWidth="100.0" layoutX="35.0" layoutY="29.0" pickOnBounds="true" preserveRatio="true">
             <Image url="@images/sair.png" />
         </ImageView>
         <Button fx:id="sairB" layoutX="30.0" layoutY="29.0" mnemonicParsing="false" onAction="#handleSair" prefHeight="80.0" prefWidth="100.0" style="-fx-background-color: transparent;" />
@@ -54,6 +54,11 @@
         <ImageView fitHeight="56.0" fitWidth="32.0" layoutX="14.0" layoutY="265.0" pickOnBounds="true" preserveRatio="true">
             <Image url="@images/calendario-diferenca.png" />
         </ImageView>
+
+        <!-- BOTÕES DE NAVEGAÇÃO DO CALENDÁRIO -->
+        <Button fx:id="btnMesAnterior" layoutX="50.0" layoutY="310.0" text="&lt;" />
+        <Button fx:id="btnMesProximo" layoutX="220.0" layoutY="310.0" text="&gt;" />
+        <Text fx:id="txtMesAno" layoutX="120.0" layoutY="330.0" fill="#e5a000" />
 
         <!-- GRID DO CALENDÁRIO -->
         <GridPane fx:id="calendarioGrid" layoutX="50.0" layoutY="350.0" hgap="5" vgap="5" prefWidth="250.0" prefHeight="250.0" />
