--- a/src/main/resources/ui/IndicadoresView.fxml
+++ b/src/main/resources/ui/IndicadoresView.fxml
@@ -1,30 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="700.0" prefWidth="900.0"
+<BorderPane prefHeight="700.0" prefWidth="900.0"
             style="-fx-background-color: #2c2c2c;"
             xmlns="http://javafx.com/javafx/25"
             xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="br.upe.controller.IndicadoresViewController">
 
-    <!-- Linha superior: total + botão cadastrar -->
-    <Label fx:id="totalLabel" layoutX="20.0" layoutY="15.0"
-           text="Total de 0 indicador(es) cadastrados"
-           style="-fx-text-fill: #ffb300; -fx-font-size: 16px;"/>
+   <top>
+      <HBox alignment="CENTER_LEFT" spacing="10" BorderPane.alignment="CENTER">
+         <Label fx:id="totalLabel"
+                text="Total de 0 indicador(es) cadastrados"
+                style="-fx-text-fill: #ffb300; -fx-font-size: 16px;"/>
+         <Region HBox.hgrow="ALWAYS" />
+         <Button fx:id="BAddIndicador"
+                 prefWidth="190.0" prefHeight="30.0"
+                 text="Cadastrar novo indicador" textFill="#e5a000"
+                 style="-fx-background-color: #1E1E1E;"
+                 onAction="#handleAdicionarIndicador"/>
+         <padding>
+            <Insets top="15" bottom="15" left="20" right="20" />
+         </padding>
+      </HBox>
+   </top>
 
-    <Button fx:id="BAddIndicador" layoutX="690.0" layoutY="10.0"
-            prefWidth="190.0" prefHeight="30.0"
-            text="Cadastrar novo indicador" textFill="#e5a000"
-            style="-fx-background-color: #1E1E1E;"
-            onAction="#handleAdicionarIndicador"/>
-
-    <!-- Tabela centralizada na janela -->
-    <TableView fx:id="tableIndicadores"
-               layoutX="20.0" layoutY="60.0"
-               prefWidth="860.0" prefHeight="540.0">
-        <columns>
+   <center>
+      <TableView fx:id="tableIndicadores" BorderPane.alignment="CENTER" VBox.vgrow="ALWAYS">
+         <columns>
             <TableColumn fx:id="colData" text="Data" prefWidth="100.0"/>
             <TableColumn fx:id="colPeso" text="Peso (kg)" prefWidth="120.0"/>
             <TableColumn fx:id="colAltura" text="Altura (cm)" prefWidth="120.0"/>
@@ -32,14 +40,24 @@
             <TableColumn fx:id="colGordura" text="Gordura (%)" prefWidth="140.0"/>
             <TableColumn fx:id="colMassaMagra" text="Massa Magra (%)" prefWidth="160.0"/>
             <TableColumn fx:id="colAcoes" text="Ações" prefWidth="140.0"/>
-        </columns>
-    </TableView>
+         </columns>
+         <BorderPane.margin>
+            <Insets left="20" right="20" />
+         </BorderPane.margin>
+      </TableView>
+   </center>
 
-    <!-- Botão Voltar centralizado horizontalmente -->
-    <Button fx:id="BVoltar" layoutX="700.0" layoutY="620.0"
-            prefWidth="160.0" prefHeight="40.0"
-            text="Voltar" textFill="#e5a000"
-            style="-fx-background-color: #1E1E1E;"
-            onAction="#handleVoltar"/>
+   <bottom>
+      <HBox alignment="CENTER_RIGHT" BorderPane.alignment="CENTER">
+         <Button fx:id="BVoltar"
+                 prefWidth="160.0" prefHeight="40.0"
+                 text="Voltar" textFill="#e5a000"
+                 style="-fx-background-color: #1E1E1E;"
+                 onAction="#handleVoltar"/>
+         <padding>
+            <Insets top="12" bottom="12" left="20" right="20" />
+         </padding>
+      </HBox>
+   </bottom>
 
-</AnchorPane>
+</BorderPane>
