--- a/src/main/resources/ui/MenuUsuarioLogado.fxml
+++ b/src/main/resources/ui/MenuUsuarioLogado.fxml
@@ -5,82 +5,101 @@
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="900.0" style="-fx-background-color: #2C2C2C;" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.upe.controller.MenuUsuarioLogadoController">
-      <AnchorPane layoutX="800.0" layoutY="-14.0" prefHeight="80.0" prefWidth="100.0">
-            <ImageView fitHeight="80.0" fitWidth="100.0" layoutX="10.0" layoutY="23.0" pickOnBounds="true" preserveRatio="true" AnchorPane.topAnchor="23.0">
-                  <Image url="@images/sair.png" />
+<BorderPane prefHeight="700.0" prefWidth="900.0" style="-fx-background-color: #2C2C2C;" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.upe.controller.MenuUsuarioLogadoController">
+   <left>
+      <VBox prefWidth="320.0" style="-fx-background-color: #2C2C2C;" BorderPane.alignment="CENTER">
+         <HBox alignment="CENTER_LEFT" spacing="10" style="-fx-padding: 20;">
+            <ImageView fitHeight="80.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
+               <Image url="@images/logo_app.png" />
             </ImageView>
-            <Button fx:id="sairB" layoutX="10.0" layoutY="23.0" mnemonicParsing="false" onAction="#handleSair" prefHeight="80.0" prefWidth="80.0" style="-fx-background-color: transparent;" />
-      </AnchorPane>
-      <AnchorPane layoutX="3.0" prefHeight="700.0" prefWidth="317.0">
-            <ImageView fitHeight="56.0" fitWidth="45.0" layoutX="8.0" layoutY="193.0" pickOnBounds="true" preserveRatio="true">
-                  <Image url="@images/halter_pequeno.png" />
-            </ImageView>
-            <Button fx:id="meusTreinosB" layoutX="57.0" layoutY="195.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="240.0" style="-fx-background-color: #1E1E1E;" text="Meus Treinos" textFill="#e5a000">
-               <opaqueInsets>
-                  <Insets />
-               </opaqueInsets>
-               <font>
-                  <Font size="15.0" />
-               </font>
-            </Button>
-            <ImageView fitHeight="56.0" fitWidth="45.0" layoutX="8.0" layoutY="263.0" pickOnBounds="true" preserveRatio="true">
-                  <Image url="@images/coracao.png" />
-            </ImageView>
-            <Button fx:id="meusIndicadoresB" layoutX="57.0" layoutY="265.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="240.0" style="-fx-background-color: #1E1E1E;" text="Meus Indicadores" textFill="#e5a000">
-               <opaqueInsets>
-                  <Insets />
-               </opaqueInsets>
-               <font>
-                  <Font size="15.0" />
-               </font>
-            </Button>
-            <ImageView fitHeight="56.0" fitWidth="45.0" layoutX="8.0" layoutY="467.0" pickOnBounds="true" preserveRatio="true">
-                  <Image url="@images/salvar.png" />
-            </ImageView>
-            <Button fx:id="exportarRelatoriosB" layoutX="59.0" layoutY="469.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="240.0" style="-fx-background-color: #1E1E1E;" text="Exportar Relatórios" textFill="#e5a000">
-               <opaqueInsets>
-                  <Insets />
-               </opaqueInsets>
-               <font>
-                  <Font size="15.0" />
-               </font>
-            </Button>
-            <ImageView fitHeight="56.0" fitWidth="45.0" layoutX="8.0" layoutY="329.0" pickOnBounds="true" preserveRatio="true">
-                  <Image url="@images/logo_registro.png" />
-            </ImageView>
-            <Button fx:id="gerenciarPlanosB" layoutX="57.0" layoutY="334.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="240.0" style="-fx-background-color: #1E1E1E;" text="Gerenciar Planos De Treinos" textFill="#e5a000">
-               <opaqueInsets>
-                  <Insets />
-               </opaqueInsets>
-               <font>
-                  <Font size="15.0" />
-               </font>
-            </Button>
-            <ImageView fitHeight="56.0" fitWidth="45.0" layoutX="8.0" layoutY="398.0" pickOnBounds="true" preserveRatio="true">
-                  <Image url="@images/muque.png" />
-            </ImageView>
-            <Button fx:id="gerenciarExerciciosB" layoutX="57.0" layoutY="401.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="240.0" style="-fx-background-color: #1E1E1E;" text="Gerenciar Exercícios" textFill="#e5a000">
-               <opaqueInsets>
-                  <Insets />
-               </opaqueInsets>
-               <font>
-                  <Font size="15.0" />
-               </font>
-            </Button>
-            <ImageView fitHeight="80.0" fitWidth="100.0" layoutX="19.0" layoutY="21.0" pickOnBounds="true" preserveRatio="true">
-                  <Image url="@images/logo_app.png" />
-            </ImageView>
-            <Separator layoutX="314.0" layoutY="-2.0" orientation="VERTICAL" prefHeight="707.0" prefWidth="4.0" />
-            <Separator layoutX="-5.0" layoutY="114.0" prefHeight="3.0" prefWidth="320.0" />
-            <Text fill="#e5a000" layoutX="118.0" layoutY="70.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Gym System">
+            <Text fill="#e5a000" strokeType="OUTSIDE" strokeWidth="0.0" text="Gym System">
                <font>
                   <Font name="System Bold" size="24.0" />
                </font>
             </Text>
-      </AnchorPane>
-</AnchorPane>
+         </HBox>
+         <Separator />
+         
+         <VBox spacing="10" VBox.vgrow="ALWAYS">
+            <padding>
+               <Insets top="60" left="8" right="8" />
+            </padding>
+            
+            <HBox spacing="10" alignment="CENTER_LEFT">
+               <ImageView fitHeight="56.0" fitWidth="45.0" pickOnBounds="true" preserveRatio="true">
+                  <Image url="@images/halter_pequeno.png" />
+               </ImageView>
+               <Button fx:id="meusTreinosB" mnemonicParsing="false" prefHeight="40.0" maxWidth="Infinity" HBox.hgrow="ALWAYS" style="-fx-background-color: #1E1E1E;" text="Meus Treinos" textFill="#e5a000">
+                  <font>
+                     <Font size="15.0" />
+                  </font>
+               </Button>
+            </HBox>
+            
+            <HBox spacing="10" alignment="CENTER_LEFT">
+               <ImageView fitHeight="56.0" fitWidth="45.0" pickOnBounds="true" preserveRatio="true">
+                  <Image url="@images/coracao.png" />
+               </ImageView>
+               <Button fx:id="meusIndicadoresB" mnemonicParsing="false" prefHeight="40.0" maxWidth="Infinity" HBox.hgrow="ALWAYS" style="-fx-background-color: #1E1E1E;" text="Meus Indicadores" textFill="#e5a000">
+                  <font>
+                     <Font size="15.0" />
+                  </font>
+               </Button>
+            </HBox>
+            
+            <HBox spacing="10" alignment="CENTER_LEFT">
+               <ImageView fitHeight="56.0" fitWidth="45.0" pickOnBounds="true" preserveRatio="true">
+                  <Image url="@images/logo_registro.png" />
+               </ImageView>
+               <Button fx:id="gerenciarPlanosB" mnemonicParsing="false" prefHeight="40.0" maxWidth="Infinity" HBox.hgrow="ALWAYS" style="-fx-background-color: #1E1E1E;" text="Gerenciar Planos De Treinos" textFill="#e5a000">
+                  <font>
+                     <Font size="15.0" />
+                  </font>
+               </Button>
+            </HBox>
+            
+            <HBox spacing="10" alignment="CENTER_LEFT">
+               <ImageView fitHeight="56.0" fitWidth="45.0" pickOnBounds="true" preserveRatio="true">
+                  <Image url="@images/muque.png" />
+               </ImageView>
+               <Button fx:id="gerenciarExerciciosB" mnemonicParsing="false" prefHeight="40.0" maxWidth="Infinity" HBox.hgrow="ALWAYS" style="-fx-background-color: #1E1E1E;" text="Gerenciar Exercícios" textFill="#e5a000">
+                  <font>
+                     <Font size="15.0" />
+                  </font>
+               </Button>
+            </HBox>
+            
+            <HBox spacing="10" alignment="CENTER_LEFT">
+               <ImageView fitHeight="56.0" fitWidth="45.0" pickOnBounds="true" preserveRatio="true">
+                  <Image url="@images/salvar.png" />
+               </ImageView>
+               <Button fx:id="exportarRelatoriosB" mnemonicParsing="false" prefHeight="40.0" maxWidth="Infinity" HBox.hgrow="ALWAYS" style="-fx-background-color: #1E1E1E;" text="Exportar Relatórios" textFill="#e5a000">
+                  <font>
+                     <Font size="15.0" />
+                  </font>
+               </Button>
+            </HBox>
+         </VBox>
+         
+         <Separator orientation="VERTICAL" />
+      </VBox>
+   </left>
+   
+   <top>
+      <HBox alignment="CENTER_RIGHT" style="-fx-padding: 20;" BorderPane.alignment="CENTER">
+         <StackPane>
+            <ImageView fitHeight="80.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
+               <Image url="@images/sair.png" />
+            </ImageView>
+            <Button fx:id="sairB" mnemonicParsing="false" onAction="#handleSair" prefHeight="80.0" prefWidth="80.0" style="-fx-background-color: transparent;" />
+         </StackPane>
+      </HBox>
+   </top>
+</BorderPane>
