--- a/src/main/resources/ui/visualizador.fxml
+++ b/src/main/resources/ui/visualizador.fxml
@@ -1,35 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <BorderPane prefHeight="550.0" prefWidth="600.0" style="-fx-background-color: #2c2c2c;" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.upe.controller.VisualizadorExercicioController">
 
     <center>
-        <StackPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #2c2c2c;" BorderPane.alignment="CENTER">
-            <children>
-                <ImageView fx:id="gifImageView" fitHeight="400.0" fitWidth="600.0" pickOnBounds="true" preserveRatio="true" />
-            </children>
+        <StackPane style="-fx-background-color: #2c2c2c;" BorderPane.alignment="CENTER">
+            <ImageView fx:id="gifImageView" pickOnBounds="true" preserveRatio="true" />
         </StackPane>
     </center>
 
     <bottom>
-        <AnchorPane prefHeight="150.0" prefWidth="600.0" style="-fx-background-color: #2c2c2c;" BorderPane.alignment="CENTER">
-            <children>
-                <Label layoutX="10.0" layoutY="10.0" text="Descrição do exercício:" textFill="#ffb300">
-                    <font>
-                        <Font name="System Bold" size="14.0" />
-                    </font>
-                </Label>
+        <VBox spacing="10" style="-fx-background-color: #2c2c2c;" BorderPane.alignment="CENTER">
+            <padding>
+                <Insets top="10" bottom="10" left="10" right="10" />
+            </padding>
+            <Label text="Descrição do exercício:" textFill="#ffb300">
+                <font>
+                    <Font name="System Bold" size="14.0" />
+                </font>
+            </Label>
 
-                <TextArea fx:id="descricaoArea" editable="false" layoutX="10.0" layoutY="35.0" prefHeight="100.0" prefWidth="580.0" style="-fx-control-inner-background: #1e1e1e; -fx-text-fill: #ffb300; -fx-background-color: #1e1e1e; -fx-border-color: #9c27b0; -fx-border-width: 2px;" wrapText="true" />
-            </children>
-        </AnchorPane>
+            <TextArea fx:id="descricaoArea" editable="false" prefHeight="100.0" maxHeight="150.0" VBox.vgrow="ALWAYS" style="-fx-control-inner-background: #1e1e1e; -fx-text-fill: #ffb300; -fx-background-color: #1e1e1e; -fx-border-color: #9c27b0; -fx-border-width: 2px;" wrapText="true" />
+        </VBox>
     </bottom>
 
 </BorderPane>
